# routes/api.php
@@ -5,6 +5,7 @@ use App\Http\Controllers\Api\aff\ImageBoxController;
 use App\Http\Controllers\Api\com\ArticleController;
 use App\Http\Controllers\Api\meal\FoodController as MealFoodController;
 use App\Http\Controllers\Api\meal\MenuController;
+use App\Http\Controllers\Api\sys\ReservationController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -33,6 +34,16 @@ Route::get('/menus/name/{label}',[MenuController::class,'findbyname'])
     ->where('label' , '[a-z]+');
 Route::apiResource('menus',MenuController::class);
 Route::apiResource('articles',ArticleController::class);
+
+Route::put('/reservations/validate/{reservations}',[ReservationController::class,'setvalidate'])
+    ->name('menus.validate')
+    ->where('label' , '[0-9]+');
+
+Route::put('/reservations/unvalidate/{reservations}',[ReservationController::class,'setunvalidate'])
+    ->name('menus.unvalidate')
+    ->where('label' , '[0-9]+');
+
+Route::apiResource('reservations',ReservationController::class);
 
 
 
